--- a/views/template/admin-navbar.ejs
+++ b/views/template/admin-navbar.ejs
@@ -8,7 +8,7 @@
 %>
 <nav class="navbar">
   <div class="navbar__wrapper">
-    <div class="navbar__site-name"><a href="/index">Just A Bite!</a></div>
+    <div class="navbar__site-name"><a href="/">Just A Bite!</a></div>
     <div class="navbar__list">
       <% for (let i in navbar) { %>
         <% if (Number(i) === adminNavbarId) { %>
